--- a/index.html
+++ b/index.html
@@ -2,138 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Proof of Impact Protocol (PoIP)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Proof of Impact Protocol</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f0f4f8;
-      color: #2c3e50;
-    }
-    header {
-      background-color: #1a1a2e;
-      color: white;
+      background: #0d0d0d;
+      color: #ffffff;
+      font-family: Arial, sans-serif;
+      text-align: center;
       padding: 50px 20px;
-      text-align: center;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.8em;
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 20px;
     }
-    header p {
-      margin-top: 12px;
-      font-size: 1.3em;
+    p {
+      font-size: 1.2em;
+      margin-bottom: 40px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
-    .container {
-      padding: 40px 20px;
-      max-width: 1100px;
-      margin: auto;
-    }
-    .section {
-      background: white;
-      border-radius: 12px;
-      padding: 30px;
-      margin-bottom: 30px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-    }
-    .section h2 {
-      margin-top: 0;
-    }
-    .stats {
+    .button-container {
       display: flex;
-      justify-content: space-around;
       flex-wrap: wrap;
-      margin-top: 25px;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 60px;
     }
-    .stat {
-      flex: 1 1 200px;
-      margin: 15px;
-      text-align: center;
-    }
-    .stat h3 {
-      font-size: 2.2em;
-      margin-bottom: 10px;
-      color: #1a1a2e;
-    }
-    .buttons {
-      text-align: center;
-      margin-top: 35px;
-    }
-    .buttons a {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 30px;
-      background-color: #1a1a2e;
+    .button {
+      background: #007bff;
+      border: none;
+      padding: 15px 30px;
       color: white;
+      font-size: 1em;
+      cursor: pointer;
+      border-radius: 5px;
       text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
       transition: background 0.3s ease;
     }
-    .buttons a:hover {
-      background-color: #16213e;
+    .button:hover {
+      background: #0056b3;
     }
     footer {
-      text-align: center;
       font-size: 0.9em;
-      padding: 30px 20px;
       color: #888;
+      margin-top: 60px;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Proof of Impact Protocol</h1>
-  <p>Stake. Fund Real Impact. Earn Symbolic Rewards.</p>
-</header>
+  <h1>Proof of Impact Protocol (PoIP)</h1>
+  <p>Funding verified global impact through decentralized staking, AI logic, and transparent proof tracking.</p>
 
-<div class="container">
-
-  <div class="section">
-    <h2>What is PoIP?</h2>
-    <p>PoIP is a decentralized protocol that lets users stake $POI to grow a transparent treasury. Yield is used to fund real-world bounties — verified impact in aid, innovation, and climate recovery. Stakers receive $GROW as a symbolic reward for their support.</p>
+  <div class="button-container">
+    <a href="stake.html" class="button">Stake $POI</a>
+    <a href="treasury-live.html" class="button">View Treasury</a>
+    <a href="bounty-fund.html" class="button">NGO Impact Feed</a>
+    <a href="presentation.html" class="button">Project Overview</a>
+    <a href="proof.html" class="button">View Impact Proof</a>
   </div>
 
-  <div class="section">
-    <h2>Live Impact Metrics</h2>
-    <div class="stats">
-      <div class="stat">
-        <h3>◎</h3>
-        <p><strong>$XX,XXX</strong><br>Treasury Balance</p>
-      </div>
-      <div class="stat">
-        <h3>◎</h3>
-        <p><strong>XXX</strong><br>Total POI Staked</p>
-      </div>
-      <div class="stat">
-        <h3>◎</h3>
-        <p><strong>XX</strong><br>Bounties Verified</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="section">
-    <h2>Quick Access</h2>
-    <div class="buttons">
-      <a href="stake.html">Stake Now</a>
-      <a href="treasury-live.html">Live Treasury</a>
-      <a href="presentation.html">View Summary</a>
-      <a href="grow.html">$GROW Balance</a>
-    </div>
-  </div>
-
-  <div class="section">
-    <h2>Why PoIP Matters</h2>
-    <p>This is more than a protocol — it's a movement. Join a global system that verifies where funds go, how they’re used, and lets you contribute directly to real-world change through a transparent, smart-contract-controlled treasury.</p>
-  </div>
-
-</div>
-
-<footer>
-  &copy; 2025 Proof of Impact Protocol. Built for global good.
-</footer>
+  <footer>
+    &copy; 2025 Proof of Impact Protocol &nbsp;|&nbsp; Powered by Polygon & DAO Infrastructure
+  </footer>
 
 </body>
 </html>
