--- a/index.html
+++ b/index.html
@@ -2,76 +2,139 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PoIP – Proof of Impact Protocol</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Proof of Impact Protocol (PoIP)</title>
   <style>
     body {
-      background-color: #0a0a0a;
-      color: #ffffff;
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f0f4f8;
+      color: #2c3e50;
+    }
+    header {
+      background-color: #1a1a2e;
+      color: white;
+      padding: 50px 20px;
       text-align: center;
     }
+    header h1 {
+      margin: 0;
+      font-size: 2.8em;
+    }
+    header p {
+      margin-top: 12px;
+      font-size: 1.3em;
+    }
     .container {
-      padding: 60px 20px;
+      padding: 40px 20px;
+      max-width: 1100px;
+      margin: auto;
     }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
+    .section {
+      background: white;
+      border-radius: 12px;
+      padding: 30px;
+      margin-bottom: 30px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
     }
-    p {
-      font-size: 1.2em;
-      margin-bottom: 40px;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
+    .section h2 {
+      margin-top: 0;
     }
-    .button-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      max-width: 800px;
-      margin: 0 auto;
+    .stats {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      margin-top: 25px;
     }
-    .button {
-      background-color: #0066ff;
+    .stat {
+      flex: 1 1 200px;
+      margin: 15px;
+      text-align: center;
+    }
+    .stat h3 {
+      font-size: 2.2em;
+      margin-bottom: 10px;
+      color: #1a1a2e;
+    }
+    .buttons {
+      text-align: center;
+      margin-top: 35px;
+    }
+    .buttons a {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 30px;
+      background-color: #1a1a2e;
       color: white;
-      padding: 15px 25px;
       text-decoration: none;
       border-radius: 8px;
-      font-size: 1em;
+      font-weight: bold;
       transition: background 0.3s ease;
     }
-    .button:hover {
-      background-color: #004ecc;
+    .buttons a:hover {
+      background-color: #16213e;
     }
     footer {
-      margin-top: 60px;
-      padding: 20px;
+      text-align: center;
       font-size: 0.9em;
+      padding: 30px 20px;
       color: #888;
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <h1>Proof of Impact Protocol (PoIP)</h1>
-    <p>A decentralized protocol to fund global impact transparently through staking, yield, and on-chain proof.</p>
+<header>
+  <h1>Proof of Impact Protocol</h1>
+  <p>Stake. Fund Real Impact. Earn Symbolic Rewards.</p>
+</header>
 
-    <div class="button-grid">
-      <a href="stake.html" class="button">Stake Simulation</a>
-      <a href="treasury-yield.html" class="button">Treasury Yield Simulation</a>
-      <a href="presentation.html" class="button">Live Pitch + One-Pager</a>
-      <a href="bounty-fund.html" class="button">NGO Submission & Funding</a>
-      <a href="proof.html" class="button">View Impact Proof</a> <!-- ✅ New Button -->
+<div class="container">
+
+  <div class="section">
+    <h2>What is PoIP?</h2>
+    <p>PoIP is a decentralized protocol that lets users stake $POI to grow a transparent treasury. Yield is used to fund real-world bounties — verified impact in aid, innovation, and climate recovery. Stakers receive $GROW as a symbolic reward for their support.</p>
+  </div>
+
+  <div class="section">
+    <h2>Live Impact Metrics</h2>
+    <div class="stats">
+      <div class="stat">
+        <h3>◎</h3>
+        <p><strong>$XX,XXX</strong><br>Treasury Balance</p>
+      </div>
+      <div class="stat">
+        <h3>◎</h3>
+        <p><strong>XXX</strong><br>Total POI Staked</p>
+      </div>
+      <div class="stat">
+        <h3>◎</h3>
+        <p><strong>XX</strong><br>Bounties Verified</p>
+      </div>
     </div>
   </div>
 
-  <footer>
-    &copy; 2025 Proof of Impact Protocol &nbsp;|&nbsp; All rights reserved.
-  </footer>
+  <div class="section">
+    <h2>Quick Access</h2>
+    <div class="buttons">
+      <a href="stake.html">Stake Now</a>
+      <a href="treasury-live.html">Live Treasury</a>
+      <a href="presentation.html">View Summary</a>
+      <a href="grow.html">$GROW Balance</a>
+      <a href="proof.html">View Impact Proof</a> <!-- ✅ New button added -->
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Why PoIP Matters</h2>
+    <p>This is more than a protocol — it's a movement. Join a global system that verifies where funds go, how they’re used, and lets you contribute directly to real-world change through a transparent, smart-contract-controlled treasury.</p>
+  </div>
+
+</div>
+
+<footer>
+  &copy; 2025 Proof of Impact Protocol. Built for global good.
+</footer>
 
 </body>
 </html>
