--- a/presentation.html
+++ b/presentation.html
@@ -1,79 +1,127 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Proof of Impact Protocol (PoIP)</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PoIP Project Summary</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f9ff;
-      padding: 40px;
-      color: #2c3e50;
-      line-height: 1.6;
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f6f9;
+      color: #333;
+    }
+    header {
+      background-color: #1a1a2e;
+      color: white;
+      padding: 60px 20px;
       text-align: center;
     }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: white;
-      border-radius: 12px;
-      padding: 30px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
     }
-    h1, h2 {
-      color: #1a73e8;
+    header p {
+      margin-top: 10px;
+      font-size: 1.2em;
+    }
+    .container {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
     }
     .section {
-      margin-top: 40px;
-      text-align: left;
+      background: white;
+      border-radius: 10px;
+      padding: 30px;
+      margin-bottom: 25px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
-    .button {
+    .section h2 {
+      margin-top: 0;
+      color: #1a1a2e;
+    }
+    .buttons {
+      text-align: center;
+      margin-top: 35px;
+    }
+    .buttons a {
       display: inline-block;
       margin: 10px;
-      padding: 12px 24px;
-      background: #1a73e8;
+      padding: 12px 30px;
+      background-color: #1a1a2e;
       color: white;
       text-decoration: none;
       border-radius: 8px;
+      font-weight: bold;
+      transition: background 0.3s ease;
     }
-    code {
-      background: #eef4ff;
-      padding: 2px 6px;
-      border-radius: 5px;
-      font-family: monospace;
+    .buttons a:hover {
+      background-color: #16213e;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9em;
+      padding: 30px 20px;
+      color: #888;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Proof of Impact Protocol (PoIP)</h1>
-    <p><em>Fully Live – Transparent – On-Chain – Pre-Funding Demo Model</em></p>
 
-    <div class="section">
-      <h2>Live Contracts (Mainnet Deployed)</h2>
-      <ul>
-        <li><strong>$POI Token:</strong> <code>0xba0E9625B37C2F52678D096Ad2c33B940FF6C921</code></li>
-        <li><strong>$GROW Token:</strong> <code>0x975D8d9D9c62416662d9c01A197522102aADDf20</code></li>
-        <li><strong>Treasury Vault:</strong> <code>0x30f693555e4a1eb8e76322079b11E12ee439bcC1</code></li>
-        <li><strong>Staking Contract:</strong> <code>0x603608E09b9F4AAFd50500003A59E1F9c98E4653</code></li>
-        <li><strong>DAO Contract:</strong> <code>0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6</code></li>
-      </ul>
-      <div style="margin-top: 20px; padding: 10px; border-left: 4px solid #1a73e8; background: #f0f6ff;">
-        <strong>PoIP Activation Model v1.0</strong><br />
-        <em>This is a pre-funding demo build showing full live infrastructure for staking, treasury, DAO, and symbolic reward logic. Built for transparency, trust, and demonstration purposes.</em>
-      </div>
-    </div>
+<header>
+  <h1>PoIP – Project Overview</h1>
+  <p>Where Proof Meets Impact. Built for Transparency, Purpose & Global Good.</p>
+</header>
 
-    <div class="section">
-      <h2>Explore the Protocol</h2>
-      <a class="button" href="stake.html">Staking Interface</a>
-      <a class="button" href="grow.html">$GROW Tracker</a>
-      <a class="button" href="treasury-live.html">Treasury Viewer</a>
-      <a class="button" href="ai-logic.html">AI Demo</a>
-      <a class="button" href="foundation.html">Foundation Info</a>
-      <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Whitepaper</a>
+<div class="container">
+
+  <div class="section">
+    <h2>Core Concept</h2>
+    <p>The Proof of Impact Protocol (PoIP) is a decentralized funding system that allows users to stake $POI, grow a transparent treasury, and fund verified impact bounties around the world — in areas like aid, innovation, and climate repair. All funds are traceable. All rewards are symbolic. All impact is real.</p>
+  </div>
+
+  <div class="section">
+    <h2>Staking</h2>
+    <p>Users stake $POI to help grow the PoIP treasury. Their funds are routed into a unified, low-risk DeFi yield pool. 100% of the original $POI is returned after unstaking. As a reward, stakers receive $GROW — a symbolic token with no financial promise but social significance in the PoIP ecosystem.</p>
+  </div>
+
+  <div class="section">
+    <h2>Treasury Logic</h2>
+    <p>The treasury operates using smart contracts with zero human custody. Yield from pooled staking and reserve capital is split 50/50: half reinvested, half allocated to verified impact bounties. All fund flows are transparent, automated, and designed for long-term sustainability. The treasury enters dual-yield mode after £50M is secured.</p>
+  </div>
+
+  <div class="section">
+    <h2>AI + DAO Governance</h2>
+    <p>The protocol uses an AI advisory layer to autonomously source, filter, and propose bounties from trusted NGO feeds. A DAO of $POI holders votes on approvals, treasury updates, and long-term protocol evolution. No centralized control. All decisions are publicly verifiable.</p>
+  </div>
+
+  <div class="section">
+    <h2>Symbolic Rewards</h2>
+    <p>$GROW tokens are issued to stakers as a sign of contribution — not as profit. They represent alignment with real-world good and may unlock privileges in the future DAO (e.g. voting multipliers, social badges, or access roles). PoIP deliberately avoids speculative framing.</p>
+  </div>
+
+  <div class="section">
+    <h2>Transparency</h2>
+    <p>All staking, treasury movements, and bounty disbursements are visible in real-time. Every funded bounty links to a public proof page. This ensures trust, encourages community validation, and builds a fully auditable history of impact.</p>
+  </div>
+
+  <div class="section">
+    <h2>Quick Access</h2>
+    <div class="buttons">
+      <a href="index.html">Return Home</a>
+      <a href="stake.html">Stake Now</a>
+      <a href="treasury-live.html">View Treasury</a>
+      <a href="grow.html">My $GROW</a>
+      <a href="proof.html">Impact Proof</a>
     </div>
   </div>
+
+</div>
+
+<footer>
+  &copy; 2025 Proof of Impact Protocol. Built for global good.
+</footer>
+
 </body>
 </html>
